--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,7 +64,9 @@ flutter:
 
     # To add assets to your application, add an assets section, like this:
     assets:
-        - images/
+        - assets/images/Comit_logo.png
+        - assets/images/Header.png
+
 
     # An image asset can refer to one or more resolution-specific "variants", see
     # https://flutter.dev/assets-and-images/#resolution-aware
